hide outside pool for kravi hora

--- a/data/pool_occupancy_config.json
+++ b/data/pool_occupancy_config.json
@@ -24,7 +24,7 @@
       "temporarilyClosed": "23.9.2025 - 31.5.2026",
       "todayClosed": false,
       "collectStats": true,
-      "viewStats": true
+      "viewStats": false
     }
   },
   {
